force-app/main/default/objects/Quote/fields/Calculated_Discount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Discount__c</fullName>
    <label>Calculated Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>