force-app/main/default/objects/Quote/fields/Subtotal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Amount__c</fullName>
    <description>Stores the pre-discount total of the quote.</description>
    <label>Subtotal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>